# Aligner

./: Aligner.cpp  Aligner.h  AlignerConsts.h  AlignerLauncher.cpp  CMakeLists.txt  CudaSupporter.cu  CudaSupporter.cuh  Grabber.cpp  Grabber.h  MemorySharing.cpp  MemorySharing.h  PatternMatching.cpp  PatternMatching.h  README.md  Webcam.cpp  Webcam.h  kbhit.h
AlignerViewer/: db.sqlite3  manage.py
AlignerViewer/AlignerViewer/: asgi.py  settings.py  urls.py  views.py  wsgi.py
AlignerViewer/templates/: aligner_home.html
